  Users must convert byte arrays to ``bytes before calling ``MemoryFile()``.
- Signatures of private functions and classes in _features, _warp, _io have
  been changed to always take instances of Affine instead of GDAL geotransform
  arrays (#796).
- Calling `rasterio.Env()` no longer sets hidden default config options
  CHECK_WITH_INVERT_PROJ=True and GTIFF_IMPLICIT_JPEG_OVR=False (#1011).

A number of deprecated features have been removed (#1319).

- In the rasterio.open function: we have removed 'affine' as an alias for
  'transform'.
- In the _base.DatasetBase class, and thereby all dataset objects: we have
  removed the mask_flags and affine properties. Instead, users must use the
  mask_flag_enums and transform properties.
- In the _io.DatasetReaderBase class, and thereby all dataset objects: we have
  removed the read_mask method. Users must use the read_masks method.
- In the features.rasterize function: we have removed 'replace' and 'add' as
  aliases for ``MergeAlg.replace`` and ``MergeAlg.add``.
- In the profiles.Profile class: we have removed 'affine' as alias for
  'transform' and have removed the `__call__` method. The class is no longer
  callable. Users must use the mapping protocol to copy and update profiles.
- In the windows.WindowMethodsMixin class, and thereby all dataset objects: we
  have removed the 'boundless' keyword arg from the window and from_bounds
  methods.
- In the windows.Window class: we have removed the num_cols and num_rows
  properties, the __getitem__ method, and the from_offlen and from_ranges class
  methods.

Upcoming deprecation:

- Reading array data or masks from datasets opened in "w" mode will be
  prohibited in Rasterio 1.0. We are warning about this now (#1309).

New features:

- A tools module has been added to collect file-based functions and supporting
  classes (#1300).
- ``rasterio.features.dataset_features()`` has been extracted from
  rio-shapes (#1282, #1286).

Bug fixes:
