@@ -1085,7 +1085,6 @@ cdef class DatasetWriterBase(DatasetReaderBase):
 
         # touch self.meta
         _ = self.meta
-        self.update_tags(ns='rio_creation_kwds', **kwargs)
         self._closed = False
 
     def __repr__(self):
@@ -1868,7 +1867,6 @@ cdef class BufferedDatasetWriterBase(DatasetWriterBase):
 
         # touch self.meta
         _ = self.meta
-        self.update_tags(ns='rio_creation_kwds', **kwargs)
         self._closed = False
 
     def close(self):
