@@ -20,6 +20,8 @@ Breaking changes:
   arrays (#796).
 - Calling `rasterio.Env()` no longer sets hidden default config options
   CHECK_WITH_INVERT_PROJ=True and GTIFF_IMPLICIT_JPEG_OVR=False (#1011).
+- Rasterio no longer saves creation options in metadata on created datasets
+  (#1332).
 
 A number of deprecated features have been removed (#1319).
 
@@ -46,6 +48,9 @@ Upcoming deprecation:
 
 - Reading array data or masks from datasets opened in "w" mode will be
   prohibited in Rasterio 1.0. We are warning about this now (#1309).
+- Rasterio 1.0 will ignore creation options saved in the metadata of datasets
+  by Rasterio versions < 1.0b1. Users can opt in to this behavior now by
+  setting RIO_IGNORE_CREATION_KWDS=TRUE in their environments.
 
 New features:
 
